tests/valid_programs/generics/simple_generic_function.duck
use go "fmt";

fn gen_func<T>(x: T) {
    go {
        fmt.Println(x)
    }
}

fn main() {
    gen_func<String>("hallo");
}
