tests/errors/typechecker/require_tag_give_string.duck
fn main() {
    let x: .tag = "hallo";
}
